--- a/EP2 06-10/css/styles.css
+++ b/EP2 06-10/css/styles.css
@@ -123,3 +123,29 @@
 .galeria .gallery{
     margin: 10px auto 10px;
 }
+/* css Footer*/
+.rodape {
+    padding: 50px 50px 0;
+}
+.rodape .info-contato p {
+    margin: 0px;
+}
+.rodape a {
+    text-decoration: none;
+    color: black;
+    font-size: 13px;
+}
+.rodape a:hover {
+    font-weight: bold;
+}
+.rodape .redes-sociais {
+    display: inline-block;
+}
+.rodape .redes-sociais img {
+    width: 45px;
+    height: 40px;
+}
+.rodape p.direitos {
+    text-align: center;
+    margin-top: 40px;
+}
