--- a/EP2 06-10/css/styles.css
+++ b/EP2 06-10/css/styles.css
@@ -59,6 +59,11 @@
     font-size: 15px;
 }
 /*css Destaque*/
+
+.destaque {
+    margin-top: 150px;
+}
+
 .destaque h2{
     text-align: center;
     font-size: 24px;
@@ -148,4 +153,42 @@
 .rodape p.direitos {
     text-align: center;
     margin-top: 40px;
+}
+/* css contatos */
+.contact{
+    padding: 0%;
+    height: 700px;
+}
+.col-md-3{
+    background: #ff9b00;
+    padding: 0%;
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+}
+.contact-info{
+    margin-top:5%;
+}
+.contact-info img{
+    margin-bottom: 5%;
+}
+.contact-info h2{
+    margin-bottom: 5%;
+}
+.col-md-9{
+    background: #fff;
+    padding: 3%;
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+}
+.contact-form label{
+    font-weight:600;
+}
+.contact-form button{
+    background: #25274d;
+    color: #fff;
+    font-weight: 600;
+    width: 15%;
+}
+.contact-form button:focus{
+    box-shadow:none;
 }
