--- a/EP2 06-10/css/styles.css
+++ b/EP2 06-10/css/styles.css
@@ -22,7 +22,7 @@
     top: 30px;
 }
 .menu_top .menu .login{
-    background-color: blue;
+    background-color: red;
     color: #fff;
     padding: 10px 12px;
 }
