--- a/EP2 06-10/css/styles.css
+++ b/EP2 06-10/css/styles.css
@@ -31,7 +31,7 @@
     height: 500px;
     padding: 50px;
     margin: 30px;
-    background-color: red;
+    background-color: blue;
 }
 .section-banner-home img{
     height: 400px;
